# argorator

./: .bumpversion.cfg  .cursorrules  .gitignore  =2.0  CHANGELOG.md  CONTRIBUTING.md  FEATURE_IDEAS.md  Gemfile  MANIFEST.in  Makefile  README.md  REBASE_STATUS.md  RELEASE.md  _config.yml  argorator  argorator.py  argorator_entry_point.py  bump.sh  bump_version.py  clean_type_demo.sh  complete_rebase.sh  delimited_demo.sh  enhanced_macro_demo.sh  example_macro.sh  index.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  sample.sh  setup.py  setup.sh  setup_dev.py  simple_macro_test.sh  test_edge_cases.py  test_env_script.sh  test_macro.sh  test_pos_script.sh  test_script.sh  test_script1.sh  (+4 more)
.github/workflows/: pages.yml  pypi-publish.yml  release-bump.yml  (+2 more)
argorator/: __init__.py  main.py
docs/: README.md  SETUP.md
examples/: README_annotations.md  README_google_annotations.md  annotation_examples.sh  boolean_flags_example.sh  deploy_with_annotations.sh  google_simple.sh  google_style_annotations.sh  iteration_macros_demo.sh  safety_macros_demo.sh
scripts/: bump_version.py
tests/: test_annotations.py  test_argument_groups.py  test_argument_types.py  test_bug_fix_function_parameters.py  test_cli.py  test_edge_cases.py  test_explain_command.py  test_google_annotations.py  test_integration_macros.py  test_iteration_macros.py  test_json_input.py  test_loop_variables.py  test_natural_syntax.py  test_safety_macros.py  test_safety_macros_integration.py  test_script_metadata.py  test_shebang_detection.py  test_type_hints.py  test_verbose_mode.py
(+27 files in other folders)
