[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argorator"
version = "1.0.0"
description = "A shell script argument parser and modifier"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Argorator"},
]
keywords = ["shell", "bash", "script", "argument", "parser", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/argorator/argorator"
Repository = "https://github.com/argorator/argorator.git"
Issues = "https://github.com/argorator/argorator/issues"

[project.scripts]
argorator = "argorator.main:main"

[tool.setuptools.packages.find]
include = ["argorator*"]

[tool.setuptools.package-data]
argorator = ["*.txt", "*.md"]